--- a/app/globals.css
+++ b/app/globals.css
@@ -21,10 +21,10 @@ img {
 /* Change the text color of the selected menu item */
 .ant-menu-item-selected a {
   color: #827717 !important;
+  font-weight: 500;
 }
 
 /* Change the icon color of the selected menu item */
-
 .ant-menu-item-selected .ant-menu-item-icon {
   color: #827717 !important;
 }
